Resolved y-axes misalignment

--- a/act-math-mern-app/client/src/components/PriorityMatrix.css
+++ b/act-math-mern-app/client/src/components/PriorityMatrix.css
@@ -120,14 +120,25 @@
   top: 0;
   height: 100%;
   width: var(--y-axis-width);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   text-align: right;
   padding-right: 10px;
 }
-.y-axis span:first-child { transform: translateY(-50%); }
-.y-axis span:last-child { transform: translateY(50%); }
+.y-axis span {
+  position: absolute;
+  right: 10px;
+}
+.y-axis span:nth-child(1) { /* 120s */
+  top: 0;
+  transform: translateY(-50%);
+}
+.y-axis span:nth-child(2) { /* 60s */
+  top: var(--time-threshold-percent);
+  transform: translateY(-50%);
+}
+.y-axis span:nth-child(3) { /* 0s */
+  bottom: 0;
+  transform: translateY(50%);
+}
 
 .x-axis {
   position: absolute;
@@ -138,11 +149,11 @@
 }
 .x-axis span {
   position: absolute;
-  bottom: 0;
+  bottom: -15px;
 }
-.x-axis span:nth-child(1) { left: 0; transform: translateX(-50%); bottom: -55px; }
-.x-axis span:nth-child(2) { left: var(--accuracy-threshold); transform: translateX(-50%); bottom: -55px; }
-.x-axis span:nth-child(3) { right: 0; transform: translateX(50%); bottom: -55px; }
+.x-axis span:nth-child(1) { left: 0; transform: translateX(-50%); }
+.x-axis span:nth-child(2) { left: var(--accuracy-threshold); transform: translateX(-50%); }
+.x-axis span:nth-child(3) { right: 0; transform: translateX(50%); }
 
 .y-axis-label {
   position: absolute;
